# icube-movements-classifier

./: .gitignore  README.md  main.py  pyproject.toml  test
src/icube-movements-classifier/: icube_movements_classifier.py
src/icube_movements_classifier/: IMCFactory.py  __init__.py  base_event_handler.py  icube_movements_classifier.py  imc_Matb_Movement.py  imc_button.py  imc_double_full_touch.py  imc_grab_pose.py  imc_matb.py  imc_swipes.py  swipes.py
