[project]
name = "icube-movements-classifier"  # Required
version = "0.0.261"  # Required
description = "Python library to compute features related to how the iCube is handled over time"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.7"
#license = {file = "LICENSE.txt"}
keywords = ["tactile", "manipulation", "imu", "sensorized object"]  # Optional

authors = [
  {name = "Dario Pasquali", email = "dario.pasquali@iit.it" },
]

maintainers = [
    {name = "Dario Pasquali", email = "dario.pasquali@iit.it" },
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [ # Optional
  "numpy",
  "icube@git+https://gitlab.iit.it/cognitiveInteraction/icube",
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel","pandas","quaternions"]
build-backend = "setuptools.build_meta"
